--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <!-- === مهم‌ترین بخش برای سئو و گوگل === -->
     <title>نام کامل شما - وب‌سایت شخصی</title>
-    <meta name="description" content="وب‌سایت شخصی «نام کامل شما». مروری بر اندیشه‌ها و نوشته‌ها. آورد به اضطرارم اول به وجود...">
-    <meta name="author" content="نام کامل شما">
-    <meta name="keywords" content="نام شما, نام کامل شما, نوشته های نام شما, سایت شخصی نام شما">
+    <meta name="description" content="وب‌سایت شخصی امیرحسین دادگستر. مروری بر اندیشه‌ها و نوشته‌ها. آورد به اضطرارم اول به وجود...">
+    <meta name="author" content="امیرحسین دادگستر">
+    <meta name="keywords" content="امیرحسین دادگستر, دادگستر, Amirhossein Dadgostar , سایت شخصی امیرحسین دادگستر ">
     
     <!-- آدرس اصلی سایت (بسیار مهم برای جلوگیری از محتوای تکراری) -->
     <link rel="canonical" href="https://irdadgostar.github.io/">
@@ -20,7 +20,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "نام کامل شما",
+      "name": "امیرحسین دادگستر",
       "url": "https://irdadgostar.github.io/",
       "sameAs": [
         "آدرس لینکدین یا شبکه اجتماعی دیگر (اختیاری)"
@@ -96,7 +96,7 @@
 
     <main class="container">
         <!-- عنوان اصلی سایت که برای گوگل بسیار مهم است -->
-        <h1 style="display:none;">وب‌سایت شخصی نام کامل شما</h1>
+        <h1 style="display:none;">وب‌سایت شخصی امیرحسین دادگستر</h1>
 
         <div class="poem">
             <p>
@@ -128,4 +128,4 @@
 
 </body>
 </html>
- 
+ امیرحسین دادگستر
