--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- === مهم‌ترین بخش برای سئو و گوگل === -->
-    <title>نام کامل شما - وب‌سایت شخصی</title>
+    <title>امیرحسین دادگستر - وب‌سایت شخصی</title>
     <meta name="description" content="وب‌سایت شخصی امیرحسین دادگستر. مروری بر اندیشه‌ها و نوشته‌ها. آورد به اضطرارم اول به وجود...">
     <meta name="author" content="امیرحسین دادگستر">
     <meta name="keywords" content="امیرحسین دادگستر, دادگستر, Amirhossein Dadgostar , سایت شخصی امیرحسین دادگستر ">
@@ -125,7 +125,6 @@
             document.getElementById('last-updated').textContent = today.toLocaleDateString('fa-IR', options);
         });
     </script>
-
+امیرحسین دادگستر
 </body>
 </html>
- امیرحسین دادگستر
