--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     
     <footer>
         <p>آخرین بروزرسانی: <span id="last-updated"></span></p>
-   
+   امیرحسین دادگستر|Amirhossein Dadgostar 
     </footer>
 
     <!-- === اسکریپت برای گول زدن ربات گوگل! === -->
