--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
     <!-- === اطلاعات پایه و ضروری === -->
@@ -7,12 +7,16 @@
 
     <!-- === مهم‌ترین بخش برای سئو و گوگل === -->
     <title>امیرحسین دادگستر - وب‌سایت شخصی</title>
-    <meta name="description" content="وب‌سایت شخصی امیرحسین دادگستر. مروری بر اندیشه‌ها و نوشته‌ها. آورد به اضطرارم اول به وجود...">
-    <meta name="author" content="امیرحسین دادگستر">
-    <meta name="keywords" content="امیرحسین دادگستر, دادگستر, Amirhossein Dadgostar , سایت شخصی امیرحسین دادگستر ">
+    <meta name="description" content="وب‌سایت شخصی امیرحسین دادگستر (Amirhossein Dadgostar). مروری بر اندیشه‌ها و نوشته‌ها. آورد به اضطرارم اول به وجود...">
+    <meta name="author" content="امیرحسین دادگستر, Amirhossein Dadgostar">
+    <meta name="keywords" content="امیرحسین دادگستر, دادگستر, Amirhossein Dadgostar, سایت شخصی امیرحسین دادگستر">
     
     <!-- آدرس اصلی سایت (بسیار مهم برای جلوگیری از محتوای تکراری) -->
-    <link rel="canonical" href="https://irdadgostar.github.io/">
+    <!-- دامنه اصلی شما در اینجا ثبت شده تا گوگل آن را به عنوان آدرس مرجع بشناسد -->
+    <link rel="canonical" href="https://amirdadgostar.ir/">
+
+    <!-- آیکون سایت (Favicon) که در تب مرورگر نمایش داده می‌شود -->
+    <link rel="icon" href="icone.jpg" type="image/jpeg">
 
     <!-- === اطلاعات پیشرفته برای گوگل (Structured Data) === -->
     <!-- این بخش به گوگل می‌گوید که این سایت درباره یک شخص است -->
@@ -21,10 +25,8 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "امیرحسین دادگستر",
-      "url": "https://irdadgostar.github.io/",
-      "sameAs": [
-        "آدرس لینکدین یا شبکه اجتماعی دیگر (اختیاری)"
-      ]
+      "url": "https://amirdadgostar.ir/",
+      "sameAs": []
     }
     </script>
 
@@ -88,6 +90,12 @@
             bottom: 10px;
             font-size: 0.8rem;
             color: #555;
+            width: 100%;
+        }
+
+        footer a {
+            color: #888;
+            text-decoration: none;
         }
     </style>
 
@@ -113,8 +121,12 @@
     </main>
     
     <footer>
+        <p>امیرحسین دادگستر | Amirhossein Dadgostar</p>
+        <p>
+            <span>آدرس جایگزین: </span>
+            <a href="https://irdadgostar.github.io/" target="_blank" rel="noopener noreferrer">irdadgostar.github.io</a>
+        </p>
         <p>آخرین بروزرسانی: <span id="last-updated"></span></p>
-   امیرحسین دادگستر|Amirhossein Dadgostar 
     </footer>
 
     <!-- === اسکریپت برای گول زدن ربات گوگل! === -->
