--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <meta name="google-site-verification" content="xqZRXoN_FgLIQn9ZSzRoL6GyJyOMyOTr6U0urL3dWZs" />
     <!-- === اطلاعات پایه و ضروری === -->
     <meta charset="UTF-8">
+ <meta name="google-site-verification" content="xqZRXoN_FgLIQn9ZSzRoL6GyJyOMyOTr6U0urL3dWZs" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- === مهم‌ترین بخش برای سئو و گوگل === -->
