--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
- 
+ <meta name="google-site-verification" content="zXfVyixqsSTuEfg_aSQZ715-7yc2Gec2as6DbaYymcI" />
     <!-- === اطلاعات پایه و ضروری === -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
