--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- ================= SEO Tags ================= -->
-    <title>امیرحسین دادگستر | مجموعه آثار و پژوهش‌ها</title>
+    <title>امیرحسین دادگستر | پژوهش‌ها</title>
     <meta name="description" content="مجموعه آثار و پژوهش‌های امیرحسین دادگستر. دسترسی به کتاب‌ها، مقالات و یادداشت‌ها در زمینه‌های علوم اسلامی، قرآن‌شناسی تحلیلی، فقه، حقوق و تربیت نوجوان.">
     <meta name="keywords" content="امیرحسین دادگستر, قرآن شناسی تحلیلی, فهم نوجوان و نوجوانی, راه روشن سیر مراحل اعتقادی, پژوهشگر اسلامی, علوم اسلامی, فقه, حقوق, تفسیر قرآن, تربیت نوجوان, حوزه علمیه">
     <meta name="author" content="امیرحسین دادگستر">
@@ -272,11 +272,11 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>درباره من</h3>
-                    <p>من امیرحسین دادگستر، پژوهشگر و مؤلف در حوزه‌های علوم اسلامی، قرآن‌شناسی و تربیت نوجوان هستم. این وب‌سایت، آرشیو دیجیتال آثار من برای دسترسی آسان شما عزیزان است.</p>
+                    <p>من امیرحسین دادگستر هستم. این وب‌سایت، آرشیو تحقیقاتمو اینجا میزارم.</p>
                 </div>
                 <div class="footer-col">
                     <h3>تماس</h3>
-                    <p>برای همکاری یا طرح سوالات، می‌توانید از طریق ایمیل زیر با من در ارتباط باشید:<br><a href="mailto:irdadgostar@gmail.com">irdadgostar@gmail.com</a></p>
+                    <p>می‌توانید از طریق ایمیل زیر با من در ارتباط باشید<br><a href="mailto:irdadgostar@gmail.com">irdadgostar@gmail.com</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
