--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        ==================== -->
 
     <!-- 1. Primary Title (Persian + English) -->
-    <title>امیرحسین دادگستر | پژوهش‌ها و آثار (Amirhossein Dadgostar)</title>
+    <title>امیرحسین دادگستر | پژوهش‌ها  (Amirhossein Dadgostar)</title>
 
     <!-- 2. Primary Description -->
     <meta name="description" content="آرشیو دیجیتال و وب‌سایت رسمی امیرحسین دادگستر (Amirhossein Dadgostar). مجموعه آثار در حوزه‌های علوم اسلامی، قرآن‌شناسی، فقه و حقوق.">
@@ -215,7 +215,7 @@
         <section id="publications" class="page-section">
             <div class="container">
                 <div class="section-header">
-                    <h2>پژوهش‌ها و آثار</h2>
+                    <h2>ماحصل</h2>
                 </div>
                 <div class="search-wrapper">
                     <input type="text" id="search-input" placeholder="جستجو در میان آثار...">
@@ -233,7 +233,7 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>درباره من</h3>
-                    <p>پژوهشگر و علاقه‌مند به حوزه‌های علوم اسلامی، قرآن‌شناسی تحلیلی و تربیت نوجوان. این وب‌سایت، آرشیوی از پژوهش‌ها و یادداشت‌های من است.</p>
+                    <p>من امیرحسین دادگستر هستم.علاقه مند در زمینه های مختلف. این وب‌سایت آرشیوی از یاداشت‌های من است. </p>
                 </div>
                 <div class="footer-col">
                     <h3>تماس</h3>
@@ -263,7 +263,7 @@
                 </div>
             </div>
             <footer id="modal-footer">
-                <a href="#" id="modal-link" class="view-button" target="_blank" rel="noopener noreferrer">مشاهده و دریافت</a>
+                <a href="#" id="modal-link" class="view-button" target="_blank" rel="noopener noreferrer">توضیحات و دانلود</a>
             </footer>
         </div>
     </div>
