--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 </div>
             </div>
             <footer id="modal-footer">
-                <a href="#" id="modal-link" class="view-button" target="_blank" rel="noopener noreferrer">توضیحات و دانلود</a>
+                <a href="#" id="modal-link" class="view-button" target="_blank" rel="noopener noreferrer">مشاهده و دانلود</a>
             </footer>
         </div>
     </div>
