--- a/Nn.html
+++ b/Nn.html
@@ -1,3 +1,12 @@
+در کد های زیر می‌خواهم ویرایشی انجام بدهم
+در کدهای زیر می‌خواهم این دستورات را کامل اجرا کنی بدون اینکه ذره ای خللی به کدهای من وارد شود... حتی اگر هزاران خط بشوند کدهای من را باید ریز به ریز   بنویسی و بفرستی(هم کد اچ تی ام ال را باید کامل و با تمام جزئیات بنویسی و بفرستی و هم کد اسکریپت گوگل را) ... کد را باید دقیق و با تمام جزئیات بنویسی و بفرستی. باید تمام ویرایش های درخواستی را بدون اینکه مشکلی در کد ایجاد بشود با کمال دقت و صحت بنویسی و ارسال کنی و نباید حتی ذره ای اشتباه در کدها پیش بیاید... نباید حتی ذره ای از کدها را حذف کنی یا ننویسی...
+
+دستور اول: در قسمت اقدامات انجام نشده میخواهم که اقدامات را نمایش ندهد بلکه اور اقدامی باشد تعداد را که الان مینویسه اما ابنجوری بنویسه مثلا پاداش 6 جریمه 9 و با کلبک روی هرکدام در پنجره لازشویی باز شوند 
+دستور دوم: در قسمت کارنامه باید جستجو وجود داشته باشه و همچنین باید اینجا هم تفکیک بشه بین جریمه و پاداش و با کلیک روی هرکدام بالا بیایند 
+دستور سوم: من میخواهم در قسمت اقدامات انجام نشده دلیل نوشته بشه و در قسمت اقدامات و کارنامه بیان بشه که  جریمه یا پاداش بخاطر چه بوده و اطلاعاتش هم بنویسه مثلا چندمرتبه انجام شده و از چه تاریخی و تا چه تاریخی بوده
+دستور چهارم: در قسمت هایی که رفتارها و پاداش و جریمه اضافه یا ویرایش می‌شود. باید چند عمل رخ بدهد. یکی اینکه افزوده جدید در ته لیست که اضافه میشه خودکار روی همون مورو اخر اسکرول بشه. دوم اینکه ویرایش ها در پنجره پاپ آپی نمایش داده شود. 
+
+کد
    <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
@@ -1355,3 +1364,16 @@
 </script>
 </body>
 </html>
+
+آخرین دستور من: حتما حتما کد را کامل بفرست
+نمیخوام یه وقت کد  را مختصر کرده باشی یا چیزی از کد کم کرده باشی حتی اگر یک کد کوچک باشد یا حتی یک کلمه یا یک حرف باشد 
+کد را صحیح و دقیق با آخرین ویرایش ها و  با آخرین تغییرات میفرستی هرچند خیلی خیلی خیلی طولانی بشه
+کامل میفرستی با تمام جزئیات
+کامل میفرستی
+کد رو کامل کامل
+حتی اندازه یک ذره کم نمیزاری
+ویرایش ها را کامل انجام میدی و هیچ چیزی حذف نمیکنی حتی ذره ای
+لطفا کد را کامل و با تمام جزئیات بنویس و فقط ویرایش خواسته شده را انجام بده و کامل بفرست و هیچ چیزی از کد کم نکن و ویرایش دیگه ای هم نده و فقط ویرایش خواسته شده را انجام بده و کامل بفرست
+لطفا حتی ذره ای دیگر از کد کم نکنی و ویرایش دیگری ندهی 
+کد را کامل ویرایش کن و صحیح و دقیق بفرست
+ حتی ذره ای دیگه از کد کم نکنی و به هیچ عنوان ذره ای دیگه در کد تغییر ندهی و لطفا فقط ویرایش خواسته شده را انجام بده و کامل بفرست
