--- a/Nn.html
+++ b/Nn.html
@@ -1,4 +1,4 @@
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
 
         .container { max-width: 600px; margin: 0 auto; padding: 15px; }
 
-        /* --- Header Area (Fixed Sizing - Edit 1) --- */
+        /* --- Header Area (Fixed Sizing) --- */
         .top-bar {
             display: flex; justify-content: space-between; align-items: stretch;
             margin-bottom: 20px; gap: 10px; height: 45px;
@@ -88,7 +88,7 @@
         .sub-val { font-weight: 800; font-size: 1.2rem; }
         .sub-lbl { font-size: 0.75rem; opacity: 0.8; }
 
-        /* --- Modern Card Design (Edit 4 & 5) --- */
+        /* --- Modern Card Design (Instruction 4 & 5) --- */
         .section-header {
             display: flex; justify-content: space-between; align-items: center;
             margin: 25px 0 10px 0; padding: 0 5px;
@@ -136,7 +136,7 @@
         }
 
 
-        /* --- Settings Grid (Edit 3) --- */
+        /* --- Settings Grid (Instruction 3) --- */
         .settings-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -284,7 +284,7 @@
 <div id="tab-home" class="tab-content active">
     <div class="container">
         
-        <!-- Header: Matching Size (Edit 1) -->
+        <!-- Header: Matching Size (Instruction 1) -->
         <div class="top-bar">
             <button class="manifesto-btn" onclick="openManifestoModal()">
                 <i class="fas fa-book-open" id="manifestoIcon"></i> <span id="manifestoBtnText">منشور اخلاقی</span>
@@ -329,7 +329,7 @@
             <input type="text" id="homeSearch" placeholder="جستجو در رفتارها..." oninput="filterHomeList()">
         </div>
 
-        <!-- Virtues (Cards: Edit 4 & 5) -->
+        <!-- Virtues (Cards: Instruction 4 & 5) -->
         <div class="section-header">
             <span class="section-title virtue"><i class="fas fa-check-circle"></i> فضایل</span>
         </div>
@@ -384,7 +384,7 @@
     </div>
 </div>
 
-<!-- TAB: SETTINGS (Redesigned: Edit 3) -->
+<!-- TAB: SETTINGS (Redesigned: Instruction 3) -->
 <div id="tab-settings" class="tab-content">
     <div class="container">
         <h2>تنظیمات</h2>
@@ -460,7 +460,7 @@
     </div>
 </div>
 
-<!-- MODAL: BACKUP (New for Edit 3) -->
+<!-- MODAL: BACKUP (New for Instruction 3) -->
 <div id="backupModal" class="modal-overlay">
     <div class="modal-content">
         <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
