--- a/Nn.html
+++ b/Nn.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+   <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -37,29 +37,30 @@
 
         .container { max-width: 600px; margin: 0 auto; padding: 15px; }
 
-        /* --- Header Area (Fixed Sizing) --- */
+        /* --- Header Area (Fixed Sizing & Layout) --- */
         .top-bar {
-            display: flex; justify-content: space-between; align-items: stretch;
+            display: flex; justify-content: space-between; align-items: stretch; /* Stretch to match heights */
             margin-bottom: 20px; gap: 10px; height: 45px;
         }
 
         .manifesto-btn {
-            flex: 1;
+            flex: 1; /* Equal width distribution */
             background: var(--surface); color: var(--primary);
             border: 1px solid var(--primary); 
             border-radius: 12px; font-size: 0.8rem; font-weight: bold;
             display: flex; align-items: center; justify-content: center; gap: 6px; 
             cursor: pointer; box-shadow: var(--shadow); transition: 0.2s;
-            padding: 0 10px;
+            padding: 0 10px; min-width: 0; /* Fix flex overflow */
         }
         .manifesto-btn.read { background: var(--success); color: white; border-color: var(--success); }
 
         .date-navigator {
-            flex: 1;
+            flex: 1; /* Equal width distribution */
             display: flex; align-items: center; justify-content: space-between;
             background: var(--surface); padding: 0 8px;
             border-radius: 12px; box-shadow: var(--shadow);
             border: 1px solid #e2e8f0;
+            min-width: 0;
         }
         .date-btn { background: none; border: none; color: var(--text-main); font-size: 1rem; cursor: pointer; display: flex; align-items: center; padding: 5px; }
         .date-btn:disabled { opacity: 0.3; cursor: not-allowed; }
@@ -88,7 +89,7 @@
         .sub-val { font-weight: 800; font-size: 1.2rem; }
         .sub-lbl { font-size: 0.75rem; opacity: 0.8; }
 
-        /* --- Modern Card Design (Instruction 4 & 5) --- */
+        /* --- Modern Card Design (Instruction 4 & 5 & 6) --- */
         .section-header {
             display: flex; justify-content: space-between; align-items: center;
             margin: 25px 0 10px 0; padding: 0 5px;
@@ -102,15 +103,15 @@
             margin-bottom: 15px; box-shadow: var(--shadow);
             display: flex; align-items: stretch; overflow: hidden;
             transition: transform 0.1s;
-            height: 80px; /* Fixed height for consistency */
+            min-height: 90px; /* Allow growth for text */
         }
         .modern-card:active { transform: scale(0.98); }
 
         /* Side Buttons */
         .card-btn {
-            width: 60px; border: none; cursor: pointer;
+            width: 55px; border: none; cursor: pointer;
             display: flex; align-items: center; justify-content: center;
-            font-size: 1.5rem; color: white; transition: background 0.2s;
+            font-size: 1.4rem; color: white; transition: background 0.2s;
         }
         .card-btn.minus { background: #fee2e2; color: var(--danger); }
         .card-btn.minus:active { background: var(--danger); color: white; }
@@ -122,19 +123,23 @@
         .card-info {
             flex: 1; display: flex; flex-direction: column;
             align-items: center; justify-content: center;
-            padding: 0 10px; text-align: center;
+            padding: 8px 5px; text-align: center;
             border-top: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;
         }
-        .card-title { font-weight: 800; font-size: 1rem; color: var(--text-main); margin-bottom: 4px; }
-        .card-meta { display: flex; gap: 8px; justify-content: center; }
+        .card-title { font-weight: 800; font-size: 1rem; color: var(--text-main); margin-bottom: 6px; }
+        .card-meta { display: flex; gap: 6px; justify-content: center; align-items: center; flex-wrap: wrap; }
         .meta-badge {
-            font-size: 0.7rem; padding: 2px 8px; border-radius: 6px;
+            font-size: 0.7rem; padding: 3px 8px; border-radius: 6px;
             background: #f1f5f9; color: var(--text-light); font-weight: bold;
         }
         .meta-badge.count {
-            background: var(--primary); color: white; /* Count style */
+            background: var(--text-main); color: white; /* Martabeh style */
         }
-
+        .next-threshold {
+            font-size: 0.65rem; color: var(--primary); margin-top: 5px;
+            background: #eff6ff; padding: 2px 8px; border-radius: 50px;
+            display: inline-flex; align-items: center; gap: 4px;
+        }
 
         /* --- Settings Grid (Instruction 3) --- */
         .settings-grid {
@@ -329,7 +334,7 @@
             <input type="text" id="homeSearch" placeholder="جستجو در رفتارها..." oninput="filterHomeList()">
         </div>
 
-        <!-- Virtues (Cards: Instruction 4 & 5) -->
+        <!-- Virtues (Cards: Instruction 4 & 5 & 6) -->
         <div class="section-header">
             <span class="section-title virtue"><i class="fas fa-check-circle"></i> فضایل</span>
         </div>
@@ -954,6 +959,24 @@
                 negScore += itemScore; 
             }
 
+            // Instruction 6: Calculate Next Threshold/Milestone
+            let thresholdInfo = "";
+            const specificRule = db.rules.find(r => r.type === 'specific' && r.targetId === b.id);
+            if (specificRule) {
+                 const consumed = log.consumed && log.consumed[specificRule.id] ? log.consumed[specificRule.id] : 0;
+                 const currentVal = count * b.weight;
+                 // Calculate how much more score is needed relative to what has been consumed/accounted for
+                 // Threshold is absolute value. 
+                 // We want to know: (consumed + threshold) - currentVal
+                 const needed = (consumed + specificRule.threshold) - currentVal;
+                 
+                 if (needed > 0) {
+                     const typeText = specificRule.resultType === 'reward' ? 'پاداش' : 'جریمه';
+                     thresholdInfo = `<div class="next-threshold"><i class="fas fa-info-circle"></i> ${needed} امتیاز تا ${typeText}</div>`;
+                 }
+            }
+
+
             // Instruction 4 & 5: Modern Card Design + Count Indicator
             const html = `
                 <div class="modern-card ${b.type}">
@@ -966,6 +989,7 @@
                             <span class="meta-badge">ضریب: ${b.weight}</span>
                             <span class="meta-badge count">تعداد: ${count}</span>
                         </div>
+                        ${thresholdInfo}
                     </div>
                     <button class="card-btn plus" onclick="updateCount('${b.id}', 1)">
                         <i class="fas fa-plus"></i>
