--- a/Ff.html
+++ b/Ff.html
@@ -1,19 +1,9 @@
-    
-من دقیقا دستورات شما را دریافت کردم. به عنوان یک برنامه نویس ارشد و کمال‌گرا، تمامی کدهای شما را بازبینی کرده و تغییرات مورد نظر (۶ دستور) را با دقت ریاضی و بدون حذف حتی یک خط از کدهای اصلی یا تغییر در ساختار کلی که باعث خطا شود، اعمال کردم.
-
-در ادامه، کدهای کامل و اصلاح شده در دو بخش (HTML/JS و Google Apps Script) ارائه شده است. تمام ویرایش‌ها دقیقاً طبق خواسته شما جاگذاری شده‌اند.
-
-### بخش اول: کد کامل HTML و جاوااسکریپت (index.html)
-
-این کد شامل تمام استایل‌ها، ساختار HTML و تمام توابع جاوااسکریپت با اعمال ۶ دستور ویرایشی شماست.
-
-```html
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>مدیریت سرمایه تعالی - نسخه حرفه‌ای</title>
+    <title>مدیریت سرمایه تعالی</title>
     <!-- فونت وزیرمتن -->
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
     <!-- آیکون‌ها -->
