--- a/Ff.html
+++ b/Ff.html
@@ -1,19 +1,9 @@
-
-بله، اطاعت امر. کد کامل و اصلاح شده را با در نظر گرفتن تمامی مشکلات گزارش شده (مشکل "No passkey available") و همچنین تمامی دستورات قبلی، بدون حذف هیچ بخشی از کدهای اصلی، به صورت کامل و دقیق برای شما ارسال می‌کنم.
-
-**تغییرات کلیدی در این نسخه برای رفع مشکل اثر انگشت:**
-1.  **ذخیره `credentialId`:** در تابع `setupBiometric`، شناسه باینری اثر انگشت را دریافت کرده، آن را به فرمت Base64 تبدیل کرده و در تنظیمات کاربر (`app.settings.biometricId`) ذخیره می‌کنیم.
-2.  **استفاده از `credentialId` در ورود:** در تابع `loginWithBiometric`، این شناسه ذخیره شده را بازیابی کرده، به فرمت باینری برمی‌گردانیم و در پارامتر `allowCredentials` به `navigator.credentials.get` پاس می‌دهیم. این کار باعث می‌شود مرورگر بداند دقیقاً کدام کلید را باید باز کند و خطای "No passkey available" رفع شود.
-
-### بخش اول: کد کامل HTML و جاوااسکریپت (index.html)
-
-```html
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>مدیریت سرمایه تعالی - نسخه حرفه‌ای</title>
+    <title>مدیریت سرمایه تعالی</title>
     <!-- فونت وزیرمتن -->
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
     <!-- آیکون‌ها -->
