--- a/Ff.html
+++ b/Ff.html
@@ -1298,28 +1298,28 @@
                 <div class="settings-item" onclick="setupBiometric()">
                     <div style="display:flex; align-items:center;">
                         <div class="settings-item-icon si-green"><i class="fas fa-fingerprint"></i></div>
-                        <div class="settings-text">فعال‌سازی ورود با اثر انگشت/فیس‌آیدی</div>
+                        <div class="settings-text">ورود با اثرانگشت</div>
                     </div>
                     <i class="fas fa-chevron-left settings-chevron"></i>
                 </div>
                 <div class="settings-item" onclick="openPrioritySettings()">
                     <div style="display:flex; align-items:center;">
                         <div class="settings-item-icon si-orange"><i class="fas fa-sort-amount-up"></i></div>
-                        <div class="settings-text">مدیریت هوشمند اولویت‌ها</div>
+                        <div class="settings-text">مدیریت اولویت‌ها</div>
                     </div>
                     <i class="fas fa-chevron-left settings-chevron"></i>
                 </div>
                 <div class="settings-item" onclick="changeecUserName()">
                     <div style="display:flex; align-items:center;">
                         <div class="settings-item-icon si-blue"><i class="fas fa-user-edit"></i></div>
-                        <div class="settings-text">تغییر نام کاربر</div>
+                        <div class="settings-text">تغییر نام</div>
                     </div>
                     <i class="fas fa-chevron-left settings-chevron"></i>
                 </div>
                 <label class="settings-item" style="cursor:pointer; display:flex;">
                     <div style="display:flex; align-items:center;">
                         <div class="settings-item-icon si-gray"><i class="fas fa-copy"></i></div>
-                        <div class="settings-text">کپی خام (بدون فرمت)</div>
+                        <div class="settings-text">کپی ارقام بدون ممیز</div>
                     </div>
                     <input type="checkbox" id="rawCopyCheck" style="width:20px; height:20px; margin:0;">
                 </label>
@@ -1330,14 +1330,14 @@
                 <div class="settings-item" onclick="exportExcel()">
                     <div style="display:flex; align-items:center;">
                         <div class="settings-item-icon si-green"><i class="fas fa-file-excel"></i></div>
-                        <div class="settings-text">دانلود فایل اکسل ساده</div>
+                        <div class="settings-text">فایل اکسل</div>
                     </div>
                     <i class="fas fa-chevron-left settings-chevron"></i>
                 </div>
                 <div class="settings-item" onclick="generateReportImage()">
                     <div style="display:flex; align-items:center;">
                         <div class="settings-item-icon si-blue"><i class="fas fa-file-image"></i></div>
-                        <div class="settings-text">دانلود گزارش تصویری</div>
+                        <div class="settings-text">فایل تصویری</div>
                     </div>
                     <i class="fas fa-chevron-left settings-chevron"></i>
                 </div>
@@ -1377,7 +1377,7 @@
                 <div class="settings-item" onclick="resetAll()">
                     <div style="display:flex; align-items:center;">
                         <div class="settings-item-icon si-red"><i class="fas fa-trash-alt"></i></div>
-                        <div class="settings-text" style="color:var(--danger)">ریست فکتوری (حذف کامل)</div>
+                        <div class="settings-text" style="color:var(--danger)">پاکسازی تمام سیستم</div>
                     </div>
                     <i class="fas fa-chevron-left settings-chevron"></i>
                 </div>
