--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>امیرحسین دادگستر | پرتال رسمی</title>
+    <title>امیرحسین دادگستر | AMIRDADGOSTAR </title>
     
     <!-- فونت وزیر متن -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -365,7 +365,7 @@
     <main>
         <section class="hero-container">
             <h1 class="hero-title">سایت شخصی</h1>
-            <p class="hero-subtitle">امیرحسین دادگستر | آرشیو رسمی پژوهش‌ها</p>
+            <p class="hero-subtitle">امیرحسین دادگستر |AMIRHOSSEIN </p>
 
             <!-- 3D BUTTONS -->
             <div class="action-grid">
